refactor: remove unused .gitkeep file, improve code formatting, and update page titles and content for consistency

--- a/exercises.html
+++ b/exercises.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CodeForge++ | Exercises</title>
+  <title>WeCode | Exercises</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
@@ -13,7 +13,7 @@
   <header>
     <div class="nav-container">
       <div class="logo-group">
-        <span class="logo-text">CodeForge++</span>
+        <span class="logo-text">WeCode</span>
         <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
       </div>
       <nav>
@@ -25,6 +25,11 @@
           <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
       </nav>
+
+      <button id="theme-toggle" class="btn theme-btn" title="Switch Theme">
+        <img src="assets/icons/sun.svg" alt="Theme Icon" class="theme-icon">
+      </button>
+
       <div class="menu-toggle" id="menuToggle">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -48,7 +53,7 @@
 
     <div class="course-module glass card-hover floating-card">
       <h2>Module 2: Data Structures &amp; Algorithms</h2>
-      <p>Arrays, linked lists, sorting, searching, trees, graphs and more.</p>
+      <p>Arrays, linked lists, trees, sorting, and searching.</p>
       <a href="module2.html" class="btn">Go to Module 2</a>
     </div>
 
@@ -78,13 +83,14 @@
 
     <div class="course-module glass card-hover floating-card">
       <h2>Module 7: System Design &amp; Advanced Topics</h2>
-      <p>Design patterns, high‑level architecture, scalable interview scenarios.</p>
+      <p>Design patterns, high‑level architecture, and scalable interview scenarios.</p>
       <a href="module7.html" class="btn">Go to Module 7</a>
     </div>
+
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 WeCode. All rights reserved.</p>
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
