--- a/resources.html
+++ b/resources.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeForge++ | Resources</title>
+  <title>WeCode | Resources</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="warm-theme">
   <div class="bg-wave"></div>
-
   <header>
     <div class="nav-container">
-      <div class="logo-group" style="display:flex; align-items:center;">
-        <span class="logo-text">CodeForge++</span>
+      <div class="logo-group">
+        <span class="logo-text">WeCode</span>
         <span class="logo-icon">{</span><span class="logo-icon">&lt;/&gt;</span><span class="logo-icon">}</span>
       </div>
       <nav>
@@ -25,40 +24,41 @@
           <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
       </nav>
+      <button id="theme-toggle" class="btn theme-btn" title="Switch Theme">
+        <img src="assets/icons/sun.svg" alt="Theme Icon" class="theme-icon">
+      </button>
       <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
       </div>
     </div>
   </header>
 
   <main class="page-content fade-in resource-section">
-    <h1>C++ Learning Resources</h1>
-    <p style="max-width: 800px; text-align:justify;">
-      Explore curated references, tutorials, and external links to deepen your understanding of modern C++ and related fields.
+    <h1>Learning Resources</h1>
+    <p style="max-width: 800px; margin:0 auto 30px;">
+      Explore curated references, tutorials, and external links to deepen your understanding of modern C++.
     </p>
     <div class="resource-list" style="margin-top:30px; display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
       <div class="resource-item glass card-hover floating-card" style="max-width: 300px;">
         <h2>cppreference.com</h2>
         <p>Comprehensive documentation on C++ language features and STL.</p>
-        <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
+        <a href="https://en.cppreference.com" target="_blank" class="btn">Visit Site</a>
       </div>
       <div class="resource-item glass card-hover floating-card" style="max-width: 300px;">
         <h2>isocpp.org</h2>
-        <p>Official C++ standardization information and guidelines.</p>
+        <p>Official C++ standardization info and guidelines.</p>
         <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
       </div>
       <div class="resource-item glass card-hover floating-card" style="max-width: 300px;">
         <h2>Learn C++</h2>
-        <p>Advanced tutorials and resources for modern C++.</p>
+        <p>Advanced tutorials and resources for modern C++ programming.</p>
         <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
       </div>
     </div>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 WeCode. All rights reserved.</p>
   </footer>
 
   <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
